<resources>
    <string name="app_name">Watch Out!</string>
    <string name="app_subtitle">A Crowd-Sourced Urban Hazard Reporting Mobile Application</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_report">Confirm Report</string>
    <string name="confirm_resolved">Confirm Resolved</string>
    <string name="copyright">Copyright \u00A9 2018</string>
    <string name="delete">Delete</string>
    <string name="description">Description</string>
    <string name="edit">Edit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="geolocation">Geolocation</string>
    <string name="hazard_type">Hazard Type</string>
    <string name="hint_email">Email</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_location">Hazard address</string>
    <string name="hint_password">Password</string>
    <string name="hint_repeat_password">Repeat password</string>
    <string name="location">Location</string>
    <string name="logo_description">Application logo</string>
    <string name="off">Off</string>
    <string name="ok">OK</string>
    <string name="on">On</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_question">Don\'t have an account yet?</string>
    <string name="profile">Profile</string>
    <string name="remember_me">Remember me</string>
    <string name="report">Report</string>
    <string name="report_title">Report title</string>
    <string name="resolve">Resolve</string>
    <string name="role">Role</string>
    <string name="status">Status</string>
    <string name="title">Title</string>
    <string name="title_activity_maps">Map</string>
    <string-array name="hazards">
        <item>Biological Hazard</item>
        <item>Chemical Hazard</item>
        <item>Electric Hazard</item>
        <item>Fire Hazard</item>
        <item>Pedestrian Hazard</item>
        <item>Traffic Hazard</item>
        <item>Sanitation Hazard</item>
        <item>Other</item>
    </string-array>
    <string-array name="roles">
        <item>Reporter</item>
        <item>Responder</item>
        <item>News Agency</item>
    </string-array>
</resources>
