<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewReportActivity">

    <ImageView
        android:id="@+id/ivReport"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="5dp"
        android:contentDescription="@string/logo_description"
        android:src="@mipmap/ic_launcher_round" />

    <Space
        android:id="@+id/space1"
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/report_title"
        android:inputType="textPersonName" />

    <Space
        android:id="@+id/space2"
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvHazardType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hazard_type"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spnHazardType"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:entries="@array/hazards"
            android:minHeight="24dp"
            tools:dropDownWidth="wrap_content" />

    </LinearLayout>

    <Space
        android:id="@+id/space3"
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/location"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/swGeolocation"
            style="@android:style/Widget.Holo.Light.CompoundButton.Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:gravity="right|center_vertical"
            android:showText="true"
            android:text="@string/geolocation"
            android:textAllCaps="false"
            android:textOff="@string/off"
            android:textOn="@string/on"
            tools:checked="false" />
    </LinearLayout>

    <AutoCompleteTextView
        android:id="@+id/acevLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_location" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:textAlignment="textStart" />

    <Space
        android:id="@+id/space4"
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bOK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/bCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>